fixed alignment and a few mobile bugs (rotation zoom and choppy scrolling)

--- a/Source/Style/body.styl
+++ b/Source/Style/body.styl
@@ -15,6 +15,7 @@ paddingSize = 40px;
     padding: 0;
     margin: 0;
     overflow: auto;
+    -webkit-overflow-scrolling: touch;
     height: 100%;
     width: 100%;
 
@@ -45,3 +46,4 @@ paddingSize = 40px;
 @media (max-width: lowWidth)
     #main
         width: 100%;
+        margin-top: headerHeight;
