--- a/Source/Style/header.styl
+++ b/Source/Style/header.styl
@@ -56,7 +56,7 @@
         position: fixed;
         width:100%;
         min-width: 320px;
-        height: 70px;
+        height: headerHeight;
         padding: 0;
         text-align: left;
 
