--- a/Source/Style/index.styl
+++ b/Source/Style/index.styl
@@ -9,3 +9,4 @@ html, body
     padding: 0px;
     height: 100%;
     font-family: general;
+    overflow: hidden;
